# ManifoldEditor

./: .gitignore  Doxyfile  README.md
docs/: ACTORS.md  COMPONENTS.md  PREFAB.md  USER_GUIDE.md
docs/html/: AudioSystem_8hpp_source.html  BrowserWindow_8hpp.html  BrowserWindow_8hpp_source.html  CGridSceneNode_8h_source.html  CSceneNodeAnimatorCameraOrtho_8h_source.html  Commands_8hpp_source.html  Common_8hpp_source.html  Component_8hpp_source.html  Convert_8hpp_source.html  Editor_8hpp.html  Editor_8hpp_source.html  ExplorerPanel_8hpp.html  ExplorerPanel_8hpp_source.html  FSHandler_8hpp_source.html  HeightBrush_8hpp_source.html  HeightmapData_8hpp_source.html  MainWindow_8hpp.html  MainWindow_8hpp_source.html  MapEditor_8hpp.html  MapEditor_8hpp_source.html  Map_8hpp_source.html  MpkFSHandler_8hpp_source.html  PackageManager_8hpp.html  PackageManager_8hpp_source.html  PlayProcess_8hpp_source.html  Preferences_8hpp_source.html  ProjectEditor_8hpp.html  ProjectEditor_8hpp_source.html  ProjectExplorer_8hpp.html  ProjectExplorer_8hpp_source.html  PropertyPanel_8hpp.html  PropertyPanel_8hpp_source.html  ScriptEditor_8hpp.html  ScriptEditor_8hpp.js  ScriptEditor_8hpp_source.html  Serialize_8hpp_source.html  SmoothBrush_8hpp_source.html  TerrainBrush_8hpp_source.html  TerrainEditor_8hpp_source.html  TerrainToolbar_8hpp.html  (+484 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  (+72 more)
linux/: Makefile
linux/.cmake/: CMakeLists.txt
msw/: ManifoldEditor.rc  ManifoldEditor.sln  ManifoldEditor.vcxproj  ManifoldEditor.vcxproj.filters  build.bat  post-build.bat  pre-build.bat  prebuild.vcxproj  resource.h
resource/: editor.mpk
src/editor/: AudioSystem.cpp  AudioSystem.hpp  BrowserWindow.cpp  BrowserWindow.hpp  CSceneNodeAnimatorCameraOrtho.cpp  CSceneNodeAnimatorCameraOrtho.h  Commands.cpp  Commands.hpp  Common.hpp  Component.cpp  Component.hpp  Convert.cpp  Convert.hpp  Editor.cpp  Editor.hpp  Entry.cpp  ExplorerPanel.cpp  ExplorerPanel.hpp  FSHandler.cpp  FSHandler.hpp  HeightBrush.cpp  HeightBrush.hpp  HeightmapData.cpp  HeightmapData.hpp  MainWindow.cpp  MainWindow.hpp  Map.cpp  Map.hpp  MapEditor.cpp  MapEditor.hpp  MpkFSHandler.cpp  MpkFSHandler.hpp  PackageManager.cpp  PackageManager.hpp  PlayProcess.cpp  PlayProcess.hpp  Preferences.cpp  Preferences.hpp  ProjectEditor.cpp  ProjectEditor.hpp  (+20 more)
src/extend/: CylinderSceneNode.cpp  CylinderSceneNode.hpp  PathSceneNode.cpp  PathSceneNode.hpp  PlaneSceneNode.cpp  PlaneSceneNode.hpp  PlayerStartNode.cpp  PlayerStartNode.hpp  README.md  SceneNodeFactory.cpp  SceneNodeFactory.hpp
